[package]
name = "tid-rs"
version = "0.1.0"
edition = "2021"
authors = ["Akase Cho <light.tsing@gmail.com>"]
description = "TouchId integration for Rust"
repository = "https://github.com/lightsing/tid-rs"
categories = ["authentication", "api-bindings", "hardware-support"]
keywords = ["macos", "touchid"]
license = "MIT"
include = [
    "/**/*.rs",
    "/foreign",
]

[lib]
name = "tid"

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.12"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.20", features = ["rt", "macros"]}

[package.metadata.docs.rs]
targets = [
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "aarch64-apple-ios"
]
